no longer end up with backslashes in the URIs. Reported by Ashlee Caul.
[David]

=item *

Users attempting to access the "New Alias" link without permission to create
an alias will now be told so, instead of getting an error. Reported by
Marshall. [David]

=item *

Status message now appear after saving or deleting a contributor type.
Reported by Marshall. [David]

=back

=head1 VERSION 1.8.10 (2006-03-16)

=head2 Improvements

=over

=item *

Changed (hopefully optimized) the buffer size when reading in files on
media upload. [Scott]

=item *

The installer no longer prompts for the PostgreSQL system username if the
PostgreSQL server is not running on the local box. It therefore also no longer
becomes that user in such cases. This will simplify installing Bricolage onto
a remote PostgreSQL server. [David]

=item *

The Jobs manager now sorts pending jobs by scheduled time rather than name.
[David]

=item *

Desks now remember the sort order you selected when you last visited them, for
the duration of a single login to Bricolage. [David]

=item *

When adding contributors based on a type that allows multiple roles, you no
longer have to select the role if the contributor has only one role. Suggested
by Phillip Smith. [David]

=back

=head2 Bug Fixes

=over

=item *

Eliminated errors inserting array references fetched from image info while
uploading and saving new image files. Reported by Michael Holden. Also
documented extra methods not previously documented in
L<Bric::App::MediaFunc|Bric::App::MediaFunc>. [David]

=item *

Fixed typo in the final message after an upgrade completes. Reported by Nate
Perry-Thistle. [David]

=item *

Fixed a 1.8.9 upgrade script that adds a foreign key constraint to the
"element_member" table so that it properly tests for the foreign key
constraint before it tries to add it. Reported by Wayne Slavin. [David]

=item *

Refined a few other upgrade scripts, with thanks to Rod Taylor. [David]

=item *
